Quectel RM500Q wda-get-data-format
Testing this with ModemManager and I'm seeing issues, most likely due to beta firmware in the modem. Built latest libqmi from git 1.25.1 today. It seems there's some unexpected input/output from --wda-get-data-format. Not 100% sure this is a libqmi problem or if it needs fixing in ModemManager.
ModemManager[23332]: [/dev/cdc-wdm0] Reading expected data format from: /sys/class/net/wwp0s20f0u2i4/qmi/raw_ip
ModemManager[23332]: <debug> [1579611118.590467] Allocating WDA client...
ModemManager[23332]: [/dev/cdc-wdm0] Allocating new client ID...
ModemManager[23332]: [/dev/cdc-wdm0] sent message...
<<<<<< RAW:
<<<<<< length = 16
<<<<<< data = 01:0F:00:00:00:00:00:03:22:00:04:00:01:01:00:1A
ModemManager[23332]: [/dev/cdc-wdm0] sent generic request (translated)...
<<<<<< QMUX:
<<<<<< length = 15
<<<<<< flags = 0x00
<<<<<< service = "ctl"
<<<<<< client = 0
<<<<<< QMI:
<<<<<< flags = "none"
<<<<<< transaction = 3
<<<<<< tlv_length = 4
<<<<<< message = "Allocate CID" (0x0022)
<<<<<< TLV:
<<<<<< type = "Service" (0x01)
<<<<<< length = 1
<<<<<< value = 1A
<<<<<< translated = wda
ModemManager[23332]: [/dev/cdc-wdm0] received message...
<<<<<< RAW:
<<<<<< length = 24
<<<<<< data = 01:17:00:80:00:00:01:03:22:00:0C:00:02:04:00:00:00:00:00:01:02:00:1A:03
ModemManager[23332]: [/dev/cdc-wdm0] received generic response (translated)...
<<<<<< QMUX:
<<<<<< length = 23
<<<<<< flags = 0x80
<<<<<< service = "ctl"
<<<<<< client = 0
<<<<<< QMI:
<<<<<< flags = "response"
<<<<<< transaction = 3
<<<<<< tlv_length = 12
<<<<<< message = "Allocate CID" (0x0022)
<<<<<< TLV:
<<<<<< type = "Result" (0x02)
<<<<<< length = 4
<<<<<< value = 00:00:00:00
<<<<<< translated = SUCCESS
<<<<<< TLV:
<<<<<< type = "Allocation Info" (0x01)
<<<<<< length = 2
<<<<<< value = 1A:03
<<<<<< translated = [ service = 'wda' cid = '3' ]
ModemManager[23332]: [/dev/cdc-wdm0] Registered 'wda' (version 1.24) client with ID '3'
ModemManager[23332]: <debug> [1579611118.621482] Querying device data format...
ModemManager[23332]: [/dev/cdc-wdm0] sent message...
<<<<<< RAW:
<<<<<< length = 13
<<<<<< data = 01:0C:00:00:1A:03:00:01:00:21:00:00:00
ModemManager[23332]: [/dev/cdc-wdm0] sent generic request (translated)...
<<<<<< QMUX:
<<<<<< length = 12
<<<<<< flags = 0x00
<<<<<< service = "wda"
<<<<<< client = 3
<<<<<< QMI:
<<<<<< flags = "none"
<<<<<< transaction = 1
<<<<<< tlv_length = 0
<<<<<< message = "Get Data Format" (0x0021)
ModemManager[23332]: [/dev/cdc-wdm0] received message...
<<<<<< RAW:
<<<<<< length = 20
<<<<<< data = 01:13:00:80:1A:03:02:01:00:21:00:07:00:02:04:00:01:00:11:00
ModemManager[23332]: [/dev/cdc-wdm0] received generic response (translated)...
<<<<<< QMUX:
<<<<<< length = 19
<<<<<< flags = 0x80
<<<<<< service = "wda"
<<<<<< client = 3
<<<<<< QMI:
<<<<<< flags = "response"
<<<<<< transaction = 1
<<<<<< tlv_length = 7
<<<<<< message = "Get Data Format" (0x0021)
<<<<<< TLV:
<<<<<< type = "Result" (0x02)
<<<<<< length = 4
<<<<<< value = 01:00:11:00
<<<<<< translated = FAILURE: MissingArgument
ModemManager[23332]: <debug> [1579611118.653910] Closing device to reopen it right away...
ModemManager[23332]: <debug> [1579611118.654000] Reopening device with data format...
ModemManager[23332]: [/dev/cdc-wdm0] Opening device with flags 'version-info, net-802-3, net-no-qos-header, proxy'...
ModemManager[23332]: [/dev/cdc-wdm0] created endpoint
ModemManager[23332]: [/dev/cdc-wdm0] sent message...
<<<<<< RAW:
<<<<<< length = 28
<<<<<< data = 01:1B:00:00:00:00:00:04:00:FF:10:00:01:0D:00:2F:64:65:76:2F:63:64:63:2D:77:64:6D:30
ModemManager[23332]: [/dev/cdc-wdm0] sent generic request (translated)...
<<<<<< QMUX:
<<<<<< length = 27
<<<<<< flags = 0x00
<<<<<< service = "ctl"
<<<<<< client = 0
<<<<<< QMI:
<<<<<< flags = "none"
<<<<<< transaction = 4
<<<<<< tlv_length = 16
<<<<<< message = "Internal Proxy Open" (0xFF00)
<<<<<< TLV:
<<<<<< type = "Device Path" (0x01)
<<<<<< length = 13
<<<<<< value = 2F:64:65:76:2F:63:64:63:2D:77:64:6D:30
<<<<<< translated = /dev/cdc-wdm0
ModemManager[23332]: transaction 0x4 aborted, but message is not abortable
ModemManager[23332]: <debug> [1579611123.558250] QMI port open operation finished
ModemManager[23332]: <debug> [1579611123.558292] Opening QMI device...
ModemManager[23332]: <debug> [1579611123.558307] Checking if QMI device already opening...
ModemManager[23332]: <debug> [1579611123.558321] Checking if QMI device already open...
ModemManager[23332]: <debug> [1579611123.558343] Creating QMI device...
ModemManager[23332]: [/dev/cdc-wdm0] Releasing 'wda' client with flags 'release-cid'...
ModemManager[23332]: [/dev/cdc-wdm0] Unregistered 'wda' client with ID '3'
Segmentation fault
[616530.430286] ModemManager[23332]: segfault at 0 ip 00007f8a5ed2ddb0 sp 00007ffc228cef38 error 4 in libqmi-glib.so.5.6.0[7f8a5ecad000+285000]