libqmi-glib,device: close operation should take ownership of endpoint

Otherwise, it may happen that if the QmiDevice is closed and reopened
right away, by the time the close ends up happening we're disposing
the endpoint that we created during the reopen.

Fixes https://gitlab.freedesktop.org/mobile-broadband/libqmi/issues/25